src/main/resources/k8s/blackjack-deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: blackjack
spec:
  selector:
    matchLabels:
      app: blackjack
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: blackjack
        tier: backend
        team: mjdsoft
    spec:
      containers:
      - name: blackjack
        image: mdolbear/blackjack:1.0-SNAPSHOT
        ports:
        - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1%
      maxUnavailable: 1%
