src/main/resources/k8s/blackjack-service.yml

apiVersion: v1
kind: Service
metadata:
  name: blackjack
  labels:
    app: blackjack
    tier: backend
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  # Replace with the IP of your minikube node / master node
  #externalIPs:
  #- 192.168.65.0
  selector:
    app: blackjack
    tier: backend
