src/main/resources/k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
    role: master
    tier: backend
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
    role: master
    tier: backend
